[build-system]
requires = ['flit_core >=2,<4']
build-backend = 'flit_core.buildapi'

[tool.flit.metadata]
module = 'rcdev'
author = 'José'
classifiers = [ 'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',]
description-file = 'README.md'
requires = [
    'ansible',
    'astpretty',
    'asttokens',
    'boltons',
    'build',
    'cachetools',
    'click',
    'click_completion',
    'colorama',
    'colorlog',
    'dataclass_factory',
    'datamodel-code-generator',
    'devtools[pygments]',
    'distro',
    'dnspython',
    'dpath',
    'environs',
    'envtoml',
    'executing',
    'flit',
    'frozendict',
    'funcy',
    'furl',
    'geoip2',
    'gitpython',
    'glom',
    'heartrate',
    'icecream',
    'inflect',
    'intervaltree',
    'iocextract',
    'ipaddress',
    'janus',
    'jsonpath_ng',
    'jsonpickle',
    'jupyter',
    'loguru',
    'mackup',
    'mashumaro',
    'matplotlib',
    'more_itertools',
    'motor',
    'nested_lookup',
    'notifiers',
    'numpy',
    'orjson',
    'pandas',
    'paramiko',
    'pickledb',
    'pip',
    'psutil',
    'pure_eval',
    'pydantic',
    'pymetasploit3',
    'pymongo[tls]',
    'pypattyrn',
    'pytest',
    'python-box[all]',
    'python-decouple',
    'python-dotenv',
    'python-libnmap',
    'pyyaml',
    'requests[security]',
    'retry',
    'returns',
    'rich',
    'seaborn',
    'semver',
    'setuptools',
    'shell_proc',
    'shellingham',
    'snoop',
    'sorcery',
    'stack_data',
    'structlog',
    'sty',
    'taskflow',
    'tenacity',
    'thefuck',
    'tinydb',
    'toolz',
    'tqdm',
    'typer[all]',
    'types-PyYAML',
    'types-click',
    'types-contextvars',
    'types-decorator',
    'types-docutils',
    'types-frozendict',
    'types-ipaddress',
    'types-nmap',
    'types-requests',
    'types-retry',
    'types-singledispatch',
    'types-toml',
    'types-typed_ast',
    'types-typing-extensions',
    'typing_json',
    'ujson',
    'urllib3',
    'varname',
    'verboselogs',
    'wakatime',
    'wheel',
    'xmltodict',
]
requires-python='>=3.9'

[tool.flit.scripts]
rcdev = 'rcdev:app'
